# dchub-backend

./:  main.py  .dockerignore  .gitattributes  .gitignore  01_submarine_cables.py  02_gas_processing_plants.py  03_compressor_stations.py  04_interconnect_queue.py  AGENTS.md  AI_PLATFORM_OUTREACH_GUIDE.md  Backup route snippet  CBRE_x_DCHub_Partnership_Deck.html  CBRE_x_DCHub_Partnership_Deck.md  CBRE_x_DCHub_Pat_Lynch_Email.md  CONVERSION_FIX_PLAN.md  Capacity headroom.py  DAVID_EMAIL_DRAFT.md  DAVID_EYEBALL_RESPONSE.md  DEPLOY-CHECKLIST.txt  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_LOCK.md  DEPLOYMENT_LOCK_v3.md  Deals routes .py  FIX-final-sweep.sh  FIX-iteration2-schema.sh  FIX-iteration4.sh  FIX-iteration5.sh  FUNNEL_NEXT_STEPS.md  HANDOFF_2026-04-29.md  MCP_REGISTRY_DNS_AUTH_TODO.md  NEXT_SESSION.md  PLAYBOOK.md  Procfile  QA-REPORT.md  README.md  REGISTRY_SUBMISSIONS.md  ROADMAP_WWW.md  RUNBOOK-2026-05-23.md  SESSION_HANDOFF_v3.md  (+506 more)
.agents/: agent_assets_metadata.toml
.githooks/: pre-commit
.pg_migration_backups/: agent_hub.py.bak  ai_agent_discovery.py.bak  ai_ecosystem_agent.py.bak  ai_orchestrator.py.bak  ai_wars_automation.py.bak  ai_weekly_digest.py.bak  alert_processor.py.bak  alerts.py.bak  api_server.py.bak  capacity_cleanup.py.bak  capacity_headroom_api.py.bak  cleanup_deals.py.bak  cleanup_railways.py.bak  competitor_intelligence.py.bak  (+52 more)
app/: db.py  (+1 more)
docs/mcp-helper-pkg/: .gitignore  README.md  pyproject.toml
docs/mcp-helper-pkg/dchub_mcp_helper/: __init__.py  auth.py
docs/mcp-helper-pkg/dchub_mcp_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+3357 files in other folders)
