[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dchub-mcp-helper"
version = "0.1.1"
description = "HTTP retry middleware that auto-uses DC Hub's inline trial keys (X-Trial-Key header + soft-paywall _gated marker)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DC Hub", email = "jonathan@dchub.cloud"}
]
keywords = ["dchub", "mcp", "stripe", "trial-key", "httpx", "requests", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://dchub.cloud"
Documentation = "https://dchub.cloud/.well-known/ai-agents.json"
Source = "https://github.com/azmartone67/dchub-backend"
"Bug Tracker" = "https://github.com/azmartone67/dchub-backend/issues"

[tool.setuptools]
packages = ["dchub_mcp_helper"]
